<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".RegisterActivity">

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="60dp"
            android:paddingEnd="24dp"
            tools:context=".MainActivity">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/main_logo" />

            <ImageView
                android:layout_width="336dp"
                android:layout_height="57dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/name" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/input_fname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/register_name"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/register_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/input_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/register_mobile"
                        android:inputType="phone"
                        android:digits="0123456789+"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#808080"
                        android:textSize="19sp" />


                    <Spinner
                        android:id="@+id/branch_list"
                        android:layout_width="342dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_edittext"
                        android:paddingLeft="10dp"
                        android:hint="Select Branch"
                        android:textColorHint="#808080" />

                    <Spinner
                        android:id="@+id/year_list"
                        android:layout_width="342dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_edittext"
                        android:paddingLeft="10dp"
                        android:hint="Select Year"
                        android:textColorHint="#808080"/>

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="200dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/login_button_effects"
                        android:focusable="auto"
                        android:text="@string/register_signup"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                        <ImageView
                            android:id="@+id/startup_logo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp"
                            app:srcCompat="@drawable/startup_cell_logo" />
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>